--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ kotlin = "2.2.20-RC"
 compose = "1.10.0-alpha01"
 lifecycle = "2.10.0-alpha02"
 material3 = "1.5.0-alpha02"
+appcompat = "1.7.0"
 media3 = "1.8.0"
 room = "2.8.0-rc01"
 hilt = "2.57.1"
@@ -63,6 +64,8 @@ viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose",
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 
 materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor" }
+
+appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 
 coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
