--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,13 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+      - name: Install SDK components
+        run: |
+          sdkmanager --install "platform-tools" "platforms;android-36" "build-tools;36.0.0"
+          yes | sdkmanager --licenses
+       
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
@@ -106,7 +113,7 @@ jobs:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
 
       - name: Lint Debug (app)
-        run: ./gradlew --no-configuration-cache :app:lintDebug --stacktrace --warning-mode all
+        run: ./gradlew --no-configuration-cache :app:lintUniversalDebug --stacktrace --warning-mode all
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
