--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -48,14 +48,11 @@ jobs:
               -dname "CN=Android Debug,O=Android,C=US"
           fi
 
-      - name: Build universal debug APK
-        run: ./gradlew --no-configuration-cache clean assembleUniversalDebug --stacktrace --warning-mode all
+      - name: Build and Lint Universal Debug APK
+        run: ./gradlew --no-configuration-cache --console=plain clean assembleUniversalDebug :app:lintUniversalDebug --warning-mode summary
         env:
            GITHUB_EVENT_NAME: ${{ github.event_name }}
            PULL_REQUEST: 'true'
-
-      - name: Lint Debug (app)
-        run: ./gradlew --no-configuration-cache :app:lintUniversalDebug --stacktrace --warning-mode all
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
