--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,14 +94,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
  
-      - name: Build Release APK
-        run: ./gradlew --no-configuration-cache clean assemble${{ matrix.abi }}Release --stacktrace --warning-mode all
+      - name: Build and Lint Release APK
+        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}Release :app:lint${{ matrix.abi }}Release --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
-
-      - name: Lint Release (app)
-        run: ./gradlew --no-configuration-cache :app:lint${{ matrix.abi }}Release --stacktrace --warning-mode all || ./gradlew :app:lintRelease
  
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
