--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,14 +43,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build Release APK
-        run: ./gradlew --no-configuration-cache clean assemble${{ matrix.abi }}Release --stacktrace --warning-mode all
+      - name: Build Release APK and Run Lint
+        run: ./gradlew --no-configuration-cache --console=plain clean assemble${{ matrix.abi }}Release :app:lint${{ matrix.abi }}Release --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
-
-      - name: Lint Release (app)
-        run: ./gradlew --no-configuration-cache :app:lint${{ matrix.abi }}Release --stacktrace --warning-mode all || ./gradlew :app:lintRelease
 
       - name: Sign APK
         uses: ilharp/sign-android-release@v2.0.0
@@ -106,14 +103,11 @@ jobs:
         run: |
           echo "${{ secrets.DEBUG_KEYSTORE }}" | base64 -d > ./app/persistent-debug.keystore
 
-      - name: Build Debug APK
-        run: ./gradlew --no-configuration-cache clean assembleUniversalDebug --stacktrace --warning-mode all
+      - name: Build Debug APK and Run Lint
+        run: ./gradlew --no-configuration-cache --console=plain clean assembleUniversalDebug :app:lintUniversalDebug --warning-mode summary
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
-
-      - name: Lint Debug (app)
-        run: ./gradlew --no-configuration-cache :app:lintUniversalDebug --stacktrace --warning-mode all
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
