--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Release APK and Run Lint
-        run: ./gradlew --no-configuration-cache --console=plain clean assembleRelease :app:lintRelease --warning-mode summary
+        run: ./gradlew --no-configuration-cache --console=plain clean assembleRelease :app:lintRelease --warning-mode summary --parallel
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -78,9 +78,6 @@ jobs:
     name: build (debug)
     if: github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]'
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        abi: [ 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'universal' ]
 
     steps:
       - uses: actions/checkout@v5
@@ -120,6 +117,5 @@ jobs:
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-${{ matrix.abi }}-debug
-          path: |
-            app/build/outputs/apk/debug/*${{ matrix.abi == 'universal' && 'universal' || matrix.abi }}*.apk
+          name: app-universal-debug
+          path: app/build/outputs/apk/debug/*universal*.apk
