--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,36 +38,21 @@ jobs:
             exit 0
           fi
 
-          echo "Current version: $NEW_VERSION (code: $VERSION_CODE)"
-
           if git show HEAD^:app/build.gradle.kts > /dev/null 2>&1; then
             OLD_VERSION=$(git show HEAD^:app/build.gradle.kts | grep -oP 'versionName\s*=\s*"\K[^"]+' || echo "")
-            echo "Previous version: $OLD_VERSION"
-            
             if [ "$OLD_VERSION" != "$NEW_VERSION" ]; then
-              echo "Version changed from $OLD_VERSION to $NEW_VERSION"
               echo "version_changed=true" >> $GITHUB_OUTPUT
               echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
               echo "version_code=$VERSION_CODE" >> $GITHUB_OUTPUT
             else
-              echo "Version unchanged: $NEW_VERSION"
               echo "version_changed=false" >> $GITHUB_OUTPUT
             fi
           else
-            echo "First version detected: $NEW_VERSION"
             echo "version_changed=true" >> $GITHUB_OUTPUT
             echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
             echo "version_code=$VERSION_CODE" >> $GITHUB_OUTPUT
           fi
           
-      - name: Debug output
-        run: |
-          echo "Debug Information:"
-          echo "  - version_changed: ${{ steps.check_version.outputs.version_changed }}"
-          echo "  - new_version: ${{ steps.check_version.outputs.new_version }}"
-          echo "  - version_code: ${{ steps.check_version.outputs.version_code }}"
-          echo "  - event_name: ${{ github.event_name }}"
-
   build:
     needs: check-version
     if: needs.check-version.outputs.version_changed == 'true' || github.event_name == 'workflow_dispatch'
@@ -95,7 +80,7 @@ jobs:
         run: chmod +x gradlew
  
       - name: Build and Lint Release APK
-        run: ./gradlew --no-configuration-cache --console=plain clean assembleRelease :app:lintRelease --warning-mode summary --parallel
+        run: ./gradlew --no-configuration-cache --console=plain clean assembleRelease :app:lintRelease --warning-mode summary --parallel -PTARGET_ARCH=${{ matrix.abi }}
         env:
           PULL_REQUEST: 'false'
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -113,7 +98,6 @@ jobs:
       - name: Move and rename signed APKs
         run: |
           mkdir -p app/build/outputs/apk/release/out
-          
           if [ "${{ matrix.abi }}" = "universal" ]; then
             SIGNED_APK=$(find app/build/outputs/apk/release/ -name "*universal*signed.apk" | head -1)
             TARGET_NAME="Metrolist.apk"
@@ -121,17 +105,7 @@ jobs:
             SIGNED_APK=$(find app/build/outputs/apk/release/ -name "*${{ matrix.abi }}*signed.apk" | head -1)
             TARGET_NAME="app-${{ matrix.abi }}-release.apk"
           fi
-          
-          if [ -z "$SIGNED_APK" ]; then
-            echo "No signed APK found for ${{ matrix.abi }}"
-            ls -la app/build/outputs/apk/release/
-            exit 1
-          fi
-          
           mv "$SIGNED_APK" "app/build/outputs/apk/release/out/$TARGET_NAME"
-          
-          echo "APK renamed to: $TARGET_NAME"
-          ls -la app/build/outputs/apk/release/out/
   
       - name: Upload Signed APKs
         uses: actions/upload-artifact@v4
@@ -155,40 +129,25 @@ jobs:
           
       - name: Organize APKs for release
         run: |
-          echo "Organizing APK files..."
           mkdir -p release_files
-          
           find downloaded_artifacts -name "*.apk" -exec cp {} release_files/ \;
-          
-          echo "APKs ready for release:"
-          ls -la release_files/
           
       - name: Generate release notes
         run: |
-          echo "Generating release notes..."
-          
           cat > release_notes.md << EOF
           Release of version ${{ needs.check-version.outputs.new_version }}
-          
           $(git log $(git describe --tags --abbrev=0 2>/dev/null || echo "HEAD~10")..HEAD --pretty=format:"- %s" --no-merges | head -10 || echo "- Initial release")
           EOF
-          
-          echo "Release notes preview:"
-          cat release_notes.md
           
       - name: Create Release
         env:
           GH_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         run: |
-          echo "Creating release v${{ needs.check-version.outputs.new_version }}"
-          
           gh release create "v${{ needs.check-version.outputs.new_version }}" \
             --title "${{ needs.check-version.outputs.new_version }}" \
             --notes-file release_notes.md \
             --latest \
             release_files/*.apk
-            
-          echo "Release created successfully!"
           
       - name: Update release summary
         run: |
